--- a/FoodApp/templates/base.html
+++ b/FoodApp/templates/base.html
@@ -45,8 +45,20 @@ color: rgb(90, 90, 90);
 .or i{
     line-height: 500px;
 font-size: 8rem;
-
 }
+.card
+{
+  border: 1.5px solid #918f8f;
+}
+ .card-header
+ {
+   text-align: center;
+  border-bottom: 1.8px solid #a19f9f;;
+
+  }
+
+
+
 
 </style>
 <!-- JQuery -->
