--- a/FoodApp/templates/recognize.html
+++ b/FoodApp/templates/recognize.html
@@ -25,7 +25,7 @@
     <!-- Arrow-->
     <div class="col-2 or">
         <center>
-            <i class="fas fa-angle-double-right fa-9px"></i>
+            <i class="fas fa-angle-double-right arrow"></i>
 
        </center>
     </div>
