Displayed nutrition information

--- a/FoodApp/templates/recognize.html
+++ b/FoodApp/templates/recognize.html
@@ -38,17 +38,38 @@
                 <table class="table nutrtion_info_container">
                     <tr>
                        <td class="key">Name</td>
-                       <td>Orange</td> 
+                       <td>{{result}}</td> 
                     </tr>
                     <tr>
-                        <td class="key">Color</td>
-                        <td>Orange</td> 
+                        <td class="key">Taste</td>
+                        <td>{{nutrition.Taste}}</td> 
                      </tr>
                      <tr>
-                        <td class="key">Vitamin</td>
-                        <td>A</td> 
+                        <td class="key">Calories</td>
+                        <td>{{nutrition.Nutrition.Calories}}</td> 
                      </tr>
-                      
+                     <tr>
+                        <td class="key">Water</td>
+                        <td>{{nutrition.Nutrition.Water}}</td> 
+                     </tr>
+                        <tr>
+                        <td class="key">Protein</td>
+                        <td>{{nutrition.Nutrition.Protein}}</td> 
+                     </tr>                      
+                     <tr>
+                        <td class="key">Sugar</td>
+                        <td>{{nutrition.Nutrition.Sugar}}</td> 
+                     </tr>
+                     <tr>
+                        <td class="key">Fat</td>
+                        <td>{{nutrition.Nutrition.Fat}}</td> 
+                     </tr>
+                     <tr >
+                        <td class="key">Info</td>
+                        <td><p>{{nutrition.Info}}</p></td> 
+                     </tr>
+
+                     
                 </table>
 
             </div>
