Changeed jupyter script

--- a/FoodApp/templates/recognize.html
+++ b/FoodApp/templates/recognize.html
@@ -16,7 +16,7 @@
                 </div>
                 <br><br>
 
-                <a class="btn btn-block btn-primary button-text" href="{{ url_for('ask')}}">Go Back</a>
+                <a class="btn btn-block btn-primary button-text" href="{{ url_for('home')}}">Go Back</a>
 
             </div>
         </div>
