changed the words

--- a/FoodApp/templates/home.html
+++ b/FoodApp/templates/home.html
@@ -29,7 +29,7 @@
                         <a class="btn btn-block btn-primary button-text" href="{{ url_for('ask')}}">Take Photo</a>
                         <br><br>
                         {% if  not is_home %}
-                            <a class="btn btn-block btn-primary button-text" href="{{ url_for('find')}}">Reconginze</a>
+                            <a class="btn btn-block btn-primary button-text" href="{{ url_for('find')}}">Recognize</a>
                         
                         {% endif %}
 
